# fswitch

./: Cargo.toml  README.md  build.rs
src/: main.rs  tab.rs  ui.rs
