[package]
name = "fswitch"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_Controls", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_Graphics_Dwm"] }
widestring = "0.5"

[build-dependencies]
embed-resource = "3.0.1"

[profile.release]
strip = true
opt-level = 's'
codegen-units = 1
lto = "fat"